--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <script src="../utils/utils.js"></script>
 
 
-<script	src="jqtags.js"></script>
-<script src="jqtags.test.js"></script>
+<script	src="jqtag.js"></script>
+<script src="jqtag.test.js"></script>
 <head>
 <body>
 
